--- a/main.css
+++ b/main.css
@@ -16,26 +16,14 @@ html, body {
 	display: inline-block;
 }
 
-.mainText {
-	font-size: 175px;
-	-webkit-animation: Gradient 7s ease infinite;
-	-moz-animation: Gradient 7s ease infinite;
-	-o-animation: Gradient 7s ease infinite;
-	animation: Gradient 7s ease infinite;
-}
-
-.underMain {
-	font-size: 50px;
-	-webkit-animation: Gradient 7s ease infinite;
-	-moz-animation: Gradient 7s ease infinite;
-	-o-animation: Gradient 7s ease infinite;
-	animation: Gradient 7s ease infinite;
-	bottom: 4pt;
+.logo {
+	height: 450px;
 }
 
 .head {
 	text-align: center;
 	font-size: 50px;
+	text-decoration: underline;
 }
 
 .game {
@@ -47,11 +35,6 @@ html, body {
 	text-decoration: underline;
 	color: #242424;
 	transition: 0.15s linear;
-
-	background: linear-gradient(120deg, rgba(252, 255, 0, 1) 0%, rgba(255, 9, 165, 1) 50%);
-	background-size: 300% 300%;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
 }
 
 a {
@@ -59,10 +42,15 @@ a {
 	color: #242424;
 	transition: 0.15s linear;
 
-	background: linear-gradient(120deg, rgba(252, 255, 0, 1) 0%, rgba(255, 9, 165, 1) 50%);
+	background: linear-gradient(120deg, rgba(252, 255, 0, 1) 0%, rgba(255, 9, 165, 1) 100%);
 	background-size: 300% 300%;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
+
+	-webkit-animation: Gradient 7s ease infinite;
+	-moz-animation: Gradient 7s ease infinite;
+	-o-animation: Gradient 7s ease infinite;
+	animation: Gradient 7s ease infinite;
 }
 
 a:hover {
@@ -114,9 +102,10 @@ footer {
 
 .photos img {
 	border-radius: 50%;
+	height: 75px;
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1000px) {
 	section nav {
 		font-size: 20px;
 		line-height: 36px;
@@ -130,17 +119,21 @@ footer {
 	}
 
 	p {
-		font-size: 35px
+		font-size: 30px
 	}
 
 	section {
 		font-size: 25px
-	}   
+	}
+
+	.logo {
+		height: 350px;
+	}
 }
 
 @media screen and (max-width: 760px) {
 	li {
-		font-size: 14px
+		font-size: 24px
 	}
 
 	section header {
@@ -149,51 +142,110 @@ footer {
 
 	section nav {
 		font-size: 16px;
-		line-height: 36px;
+		line-height: 26px;
+		display: inline-flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	p {
+		font-size: 30px
+	}
+
+	section {
+		font-size: 25px
 	}
 
 	footer {
 		font-size: 10px
 	}
 
+	.head {
+		font-size: 40px;
+	}
+
+	.photos img {
+		height: 75px;
+	}
+
+}
+
+@media screen and (max-width: 700px) {
+	#menu {
+		font-size: 18px;
+		margin: 25px;
+		text-align: right;
+		display: inline-block;
+	}
+
 	p {
-		font-size: 40px
+		font-size: 20px
 	}
 
 	section {
 		font-size: 25px
-	} 
-
-}
-
-@media screen and (max-width: 600px) {
-	li {
-		font-size: 20px
 	}
 
-	section nav {
-		font-size: 14px;
-		line-height: 26px;
+	.logo {
+		height: 200px;
+	}
+
+	.head {
+		font-size: 30px;
+	}
+
+	.photos img {
+		height: 45px;
+	}
+
+	footer {
+		font-size: 14px
+	}
+}
+
+@media screen and (max-width: 500px) {
+	li {
+		font-size: 14px
 	}
 
 	p {
-		font-size: 35px
+		font-size: 18px
 	}
 
 	section {
-		font-size: 30px
-	} 
+		font-size: 25px
+	}
+
+	.logo {
+		height: 130px;
+	}
+
+	.head {
+		font-size: 30px;
+	}
+
+	.photos img {
+		height: 45px;
+	}
+
+	footer {
+		font-size: 14px
+	}
+
+	#menu {
+		display: none;
+	}
 }
 
 @-webkit-keyframes Gradient {
-	0%{background-position:100% 0%}
-	50%{background-position:0% 100%}
-	100%{background-position:100% 0%}
+	0%{background-position:80% 20%}
+	50%{background-position:20% 80%}
+	100%{background-position:80% 20%}
 }
 @-moz-keyframes Gradient {
-	0%{background-position:100% 0%}
-	50%{background-position:0% 100%}
-	100%{background-position:100% 0%}
+	0%{background-position:80% 20%}
+	50%{background-position:20% 80%}
+	100%{background-position:80% 20%}
 }
 
 @keyframes Gradient {
